<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.subinkrishna.tigdemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="40dp"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/holo_blue_dark"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom"
            android:padding="16dp"
            android:text="@string/login_welcome_message"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/login_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_light"
            android:padding="16dp"
            android:text="@string/invalid_login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text"
            android:visibility="gone"
            tools:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="@dimen/text"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:maxLines="1"
                android:textSize="@dimen/text"/>

            <Button
                android:id="@+id/submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/submit"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
